# devtop

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  main.rs  types.rs
src/collector/: cpu.rs  disk.rs  docker.rs  memory.rs  mod.rs  network.rs  process.rs
src/ui/: layout.rs  mod.rs
src/ui/widgets/: cpu.rs  disk.rs  docker.rs  memory.rs  mod.rs  network.rs  process.rs
